# mellow

./: ,  .gitignore  Cargo.toml  Makefile  README.md  SYNTAX.md  example.asm  output.asm  run.sh  source.mellow
lib/assembly/: Cargo.toml
lib/assembly/src/: assembly.rs  data.rs  generate.rs  instruction.rs  lib.rs  lifetime.rs  native.rs  optimize.rs  register.rs
lib/ir/: Cargo.toml
lib/ir/src/: block.rs  cfg.rs  constant_fold.rs  convert.rs  instruction.rs  ir.rs  lib.rs  lifetime.rs  symbol_table.rs  tac.rs
lib/mellow-assembly/: Cargo.toml
lib/mellow-assembly/src/: lifetime.rs  optimize.rs  register.rs
lib/mellow-ast/: Cargo.toml
lib/mellow-ast/src/: expression.rs  lib.rs  statement.rs
lib/mellow-error/: Cargo.toml
lib/mellow-error/src/: lib.rs
lib/mellow-lex/: Cargo.toml
lib/mellow-lex/src/: error.rs  lex.rs  lexer.rs  lib.rs  source_buffer.rs  token.rs
lib/mellow-parse/: Cargo.toml
lib/mellow-parse/src/: expression.rs  lib.rs  parse.rs  parser.rs  precedence.rs  rpn.rs  statement.rs  visit.rs
lib/mellow-syntax/: Cargo.toml
lib/mellow-syntax/src/: lib.rs
lib/syntax/src/: binary.rs  error.rs  lex.rs  lib.rs  parse.rs  pattern.rs  precedence.rs  rpn.rs  statement.rs  token.rs  tree.rs  (+2 more)
output/: main.asm
sl/: Makefile  debug.c  debug.h
src/: main.rs
test/: compile.py  record.py  report.py  test.py
test/output/: boolean.mellow  if-else.mellow  if-or-else.mellow  if-or.mellow  if.mellow  let.mellow  string.mellow
test/source/: boolean.mellow  if-else.mellow  if-or-else.mellow  if-or.mellow  if.mellow  let.mellow  string.mellow
(+61 files in other folders)
