[package]
name = "mellow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "lib/ir",
    "lib/mellow-assembly",
    "lib/mellow-lex",
    "lib/mellow-parse",
    "lib/mellow-error",
]

[dependencies]
ir = { path = "lib/ir" }
mellow-assembly = { path = "lib/mellow-assembly" }
mellow-error = { path = "lib/mellow-error" }
mellow-lex = { path = "lib/mellow-lex" }
mellow-parse = { path = "lib/mellow-parse" }
